--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
+  "name": "moltin-react-microsite",
   "private": true,
   "dependencies": {
-    "nuka-carousel": "^4.2.2",
+    "@moltin/react-shopkit": "^1.0.0",
+    "nuka-carousel": "^4.2.4",
     "react": "^16.4.1",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-spinkit": "^3.0.0",
-    "shopkit": "^1.2.5",
-    "styled-components": "^3.3.3"
+    "serve": "^9.1.2",
+    "styled-components": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "now-start": "serve -s ./build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
